--- a/src/assets/style/Main.css
+++ b/src/assets/style/Main.css
@@ -33,6 +33,12 @@ body {
   height: 68px;
 }
 
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
 nav {
   margin-right: 100px;
 }
@@ -44,6 +50,12 @@ nav a {
   margin: 57px;
 }
 
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
 .main-container {
   width: 1240px;
   height: 223px;
@@ -53,16 +65,37 @@ nav a {
   background-position: 100%;
   position: absolute;
   border-radius: 25px;
-  z-index: 0;
 }
 .main-container .opacityBg {
+  width: 100%;
+  display: flex;
   position: absolute;
-  z-index: 1;
   border-radius: 25px;
   width: 1240px;
   height: 223px;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: space-around;
 }
 .main-container .opacityBg h1 {
-  color: blue;
+  color: #f6f6f6;
+  font-size: 48px;
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 100px;
+  margin-right: 100px;
+  width: 600px;
+  height: 600px;
+  background-color: #f6f6f6;
 }/*# sourceMappingURL=Main.css.map */
