--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,13 +1,13 @@
 @import "../../assets/scss/config.scss";
 
 nav {
-  margin-right: 100px;
+  padding-right: 100px;
 
   a {
     text-decoration: none;
     color: $primary;
     font-size: 24px;
     font-family: "medium";
-    margin: 57px;
+    margin-left: 57px;
   }
 }
