--- a/src/components/style/Navbar.css
+++ b/src/components/style/Navbar.css
@@ -1,10 +1,16 @@
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
 nav {
-  margin-right: 100px;
+  padding-right: 100px;
 }
 nav a {
   text-decoration: none;
   color: #ff6060;
   font-size: 24px;
   font-family: "medium";
-  margin: 57px;
+  margin-left: 57px;
 }/*# sourceMappingURL=Navbar.css.map */
