--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,1 +1,10 @@
+@import "../../assets/scss/config.scss";
 
+.home-container {
+
+  margin-left: 100px;
+  margin-right: 100px;
+  width: 600px;
+  height: 600px;
+  background-color: $secondary;
+}
