--- a/src/views/style/Home.css
+++ b/src/views/style/Home.css
@@ -1,1 +1,13 @@
-/*# sourceMappingURL=Home.css.map */
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.home-container {
+  margin-left: 100px;
+  margin-right: 100px;
+  width: 600px;
+  height: 600px;
+  background-color: #f6f6f6;
+}/*# sourceMappingURL=Home.css.map */
