font dans asset

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -8,6 +8,7 @@
 @import "../../components/Header/Header.scss";
 @import "../../components/Navbar/Navbar.scss";
 @import "../../components/Banner/Banner.scss";
+@import "../../components/Card/Card.scss";
 
 //pages
 @import "../../views/Home/Home.scss";
