--- a/src/assets/style/Main.css
+++ b/src/assets/style/Main.css
@@ -21,6 +21,35 @@ body {
   }
 }
 
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.ContainerFooter {
+  background-color: #000000;
+  color: #f6f6f6;
+  height: 209px;
+  display: flex;
+  width: 100%;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0px;
+}
+.ContainerFooter img {
+  margin-top: 66px;
+  width: 122px;
+  color: #f6f6f6;
+}
+.ContainerFooter p {
+  margin-bottom: 29px;
+  font-size: 24px;
+}
+
 .containerHearder {
   display: flex;
   justify-content: space-between;
@@ -40,14 +69,14 @@ body {
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
 nav {
-  margin-right: 100px;
+  padding-right: 100px;
 }
 nav a {
   text-decoration: none;
   color: #ff6060;
   font-size: 24px;
   font-family: "medium";
-  margin: 57px;
+  margin-left: 57px;
 }
 
 @font-face {
@@ -63,13 +92,12 @@ nav a {
   top: 171px;
   background-image: url("../../assets/img/falaise.jpg");
   background-position: 100%;
-  position: absolute;
   border-radius: 25px;
+  margin-top: 80px;
 }
 .main-container .opacityBg {
   width: 100%;
   display: flex;
-  position: absolute;
   border-radius: 25px;
   width: 1240px;
   height: 223px;
@@ -89,13 +117,64 @@ nav a {
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
+.Card {
+  margin-top: 56px;
+  margin-left: 50px;
+  width: 1000px;
+}
+.Card .ContainerCard {
+  width: 340px;
+  height: 340px;
+  background: #ff6060;
+  margin-right: 60px;
+  border-radius: 10px;
+}
+.Card .ContainerCard .BgFiltre {
+  width: 340px;
+  height: 340px;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+}
+
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
 .home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-left: 100px;
   margin-right: 100px;
-  width: 600px;
-  height: 600px;
+}
+.home-container .gallery {
+  position: absolute;
+  margin-top: 43px;
+  width: 100vh;
+  height: 100vh;
   background-color: #f6f6f6;
+  border-radius: 25px;
+}
+
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.ErreurContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #ff6060;
+}
+.ErreurContainer h1 {
+  margin-top: 100px;
+  font-weight: 700;
+  font-size: 288px;
+}
+.ErreurContainer p {
+  font-size: 36px;
+}
+.ErreurContainer a {
+  margin-top: 152px;
+  color: #ff6060;
 }/*# sourceMappingURL=Main.css.map */
