--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -1,1 +1,26 @@
-/*# sourceMappingURL=Footer.css.map */
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.ContainerFooter {
+  background-color: #000000;
+  color: #f6f6f6;
+  height: 209px;
+  display: flex;
+  width: 100%;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+.ContainerFooter img {
+  margin-top: 66px;
+  width: 122px;
+  color: #f6f6f6;
+}
+.ContainerFooter p {
+  margin-bottom: 29px;
+  font-size: 24px;
+}/*# sourceMappingURL=Footer.css.map */
