--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,10 +1,14 @@
 @import "../../assets/scss/config.scss";
 
 .home-container {
-
   margin-left: 100px;
   margin-right: 100px;
-  width: 600px;
-  height: 600px;
-  background-color: $secondary;
+ 
+
+  .gallery {
+    margin-top: 43px;
+      background-color: $secondary;
+    border-radius: 25px;
+    
+  }
 }
