--- a/src/views/style/Home.css
+++ b/src/views/style/Home.css
@@ -7,7 +7,9 @@
 .home-container {
   margin-left: 100px;
   margin-right: 100px;
-  width: 600px;
-  height: 600px;
+}
+.home-container .gallery {
+  margin-top: 43px;
   background-color: #f6f6f6;
+  border-radius: 25px;
 }/*# sourceMappingURL=Home.css.map */
