--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -9,6 +9,8 @@
 @import "../../components/Navbar/Navbar.scss";
 @import "../../components/Banner/Banner.scss";
 @import "../../components/Card/Card.scss";
+@import "../../components/Fade/Fade.scss";
+@import "../../components/Square/Square.scss";
 
 //pages
 @import "../../views/Home/Home.scss";
