--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,13 @@
 
 .containerHearder {
+  
+width: 1240px;
+margin: auto;
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
 align-items: center;
-margin-left: 100px;
+
 
   
   img {
