--- a/src/components/style/Header.css
+++ b/src/components/style/Header.css
@@ -1,9 +1,10 @@
 .containerHearder {
+  width: 1240px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
   align-items: center;
-  margin-left: 100px;
 }
 .containerHearder img {
   width: 210.32px;
