--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -29,3 +29,26 @@ $BREAKPOINT-MOBILE-LAND: "only screen and (min-width: 480px)";
     max-width: 1440px;
   }
 }
+
+@mixin button {
+  display: flex;
+  text-align: inherit;
+  padding-left: 18.8px;
+  border-radius: 5px;
+ font-size: 24px;
+ font-weight: 500;
+  color: $secondary;
+  background-color: #ff6060;
+  width: 1023px;
+  height: 47px;
+  border: none;
+  display: block;
+  float: none;
+  margin: 30px auto 0;
+  
+  img {
+    width: 20px;
+    margin-left: 10px;
+    
+  }
+}
