--- a/src/assets/style/Main.css
+++ b/src/assets/style/Main.css
@@ -1,6 +1,7 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
@@ -15,15 +16,9 @@ body {
   font-family: "Medium";
 }
 
-@media only screen and (min-width: 1280px) {
-  .App {
-    max-width: 1440px;
-  }
-}
-
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
@@ -37,8 +32,7 @@ body {
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  bottom: 0px;
+  margin-top: 30px;
 }
 .ContainerFooter img {
   margin-top: 66px;
@@ -51,11 +45,12 @@ body {
 }
 
 .containerHearder {
+  width: 1240px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
   align-items: center;
-  margin-left: 100px;
 }
 .containerHearder img {
   width: 210.32px;
@@ -64,13 +59,10 @@ body {
 
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
-nav {
-  padding-right: 100px;
-}
 nav a {
   text-decoration: none;
   color: #ff6060;
@@ -81,25 +73,23 @@ nav a {
 
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
 .main-container {
   width: 1240px;
   height: 223px;
-  left: 100px;
+  left: auto;
   top: 171px;
-  background-image: url("../../assets/img/falaise.jpg");
   background-position: 100%;
   border-radius: 25px;
   margin-top: 80px;
 }
 .main-container .opacityBg {
-  width: 100%;
   display: flex;
   border-radius: 25px;
-  width: 1240px;
+  max-width: 1240px;
   height: 223px;
   background: rgba(0, 0, 0, 0.4);
   align-items: center;
@@ -113,50 +103,129 @@ nav a {
 
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
-.Card {
-  margin-top: 56px;
-  margin-left: 50px;
-  width: 1000px;
-}
-.Card .ContainerCard {
+.ContainerCard {
+  position: relative;
   width: 340px;
   height: 340px;
-  background: #ff6060;
-  margin-right: 60px;
   border-radius: 10px;
+  overflow: hidden;
 }
-.Card .ContainerCard .BgFiltre {
-  width: 340px;
-  height: 340px;
+.ContainerCard img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.ContainerCard .BgFiltre {
+  position: absolute;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  z-index: 1;
+}
+.ContainerCard .BgFiltre h1 {
+  max-width: 60%;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  margin: 20px;
+  z-index: 2;
+}
+
+.fade {
+  transition: height 0.5s ease-in-out; /* Transition de hauteur de 0,5 seconde avec une courbe d'accélération et de décélération */
+  overflow: hidden; /* Cacher le contenu qui dépasse */
+}
+
+.fade.out {
+  opacity: 0;
+  display: none;
 }
 
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+.square {
+  width: 100%;
+  height: 100%;
+  background-color: #F6F6F6;
+  width: 1023px;
+  padding: 10px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
 .home-container {
-  margin-left: 100px;
-  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .home-container .gallery {
-  position: absolute;
+  padding: 50px;
+  max-width: 1240px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   margin-top: 43px;
-  width: 100vh;
-  height: 100vh;
   background-color: #f6f6f6;
   border-radius: 25px;
+  gap: 30px;
 }
 
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
+}
+/*|---------------| App Color Schema|---------------*/
+/*|---------------|MIXINS|---------------*/
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main button {
+  display: flex;
+  text-align: inherit;
+  padding-left: 18.8px;
+  border-radius: 5px;
+  font-size: 24px;
+  font-weight: 500;
+  color: #f6f6f6;
+  background-color: #ff6060;
+  width: 1023px;
+  height: 47px;
+  border: none;
+  display: block;
+  float: none;
+  margin: 30px auto 0;
+}
+main button img {
+  width: 20px;
+  margin-left: 10px;
+}
+
+@font-face {
+  font-family: "Medium";
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
