--- a/src/components/style/Banner.css
+++ b/src/components/style/Banner.css
@@ -1,24 +1,22 @@
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
 .main-container {
   width: 1240px;
   height: 223px;
-  left: 100px;
+  left: auto;
   top: 171px;
-  background-image: url("../../assets/img/falaise.jpg");
   background-position: 100%;
   border-radius: 25px;
   margin-top: 80px;
 }
 .main-container .opacityBg {
-  width: 100%;
   display: flex;
   border-radius: 25px;
-  width: 1240px;
+  max-width: 1240px;
   height: 223px;
   background: rgba(0, 0, 0, 0.4);
   align-items: center;
