--- a/src/components/style/Card.css
+++ b/src/components/style/Card.css
@@ -1,23 +1,40 @@
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
-.Card {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.Card .ContainerCard {
-  margin-right: 50px;
+.ContainerCard {
+  position: relative;
   width: 340px;
   height: 340px;
-  background: #ff6060;
   border-radius: 10px;
+  overflow: hidden;
 }
-.Card .ContainerCard .BgFiltre {
+.ContainerCard img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 340px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.ContainerCard .BgFiltre {
+  position: absolute;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  z-index: 1;
+}
+.ContainerCard .BgFiltre h1 {
+  max-width: 60%;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  margin: 20px;
+  z-index: 2;
 }/*# sourceMappingURL=Card.css.map */
