--- a/src/components/style/Square.css
+++ b/src/components/style/Square.css
@@ -4,10 +4,11 @@
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
-nav a {
-  text-decoration: none;
-  color: #ff6060;
-  font-size: 24px;
-  font-family: "medium";
-  margin-left: 57px;
-}/*# sourceMappingURL=Navbar.css.map */
+.square {
+  width: 100%;
+  height: 100%;
+  background-color: #f6f6f6;
+  width: 1023px;
+  padding: 10px;
+  border-radius: 5px;
+}/*# sourceMappingURL=Square.css.map */
