--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -1,14 +1,22 @@
 @import "../../assets/scss/config.scss";
 
 .home-container {
-  margin-left: 100px;
-  margin-right: 100px;
- 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  
+
 
   .gallery {
+    padding: 50px;
+    max-width: 1240px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 43px;
-      background-color: $secondary;
+    background-color: $secondary;
     border-radius: 25px;
-    
+    gap: 30px;
   }
 }
