--- a/src/views/style/Home.css
+++ b/src/views/style/Home.css
@@ -1,15 +1,22 @@
 @font-face {
   font-family: "Medium";
-  src: local("Montserrat-Medium"), url("../../components/font/Montserrat-Medium.ttf") format("truetype");
+  src: local("Montserrat-Medium"), url("../../assets/font/Montserrat-Medium.ttf") format("truetype");
 }
 /*|---------------| App Color Schema|---------------*/
 /*|---------------|MIXINS|---------------*/
 .home-container {
-  margin-left: 100px;
-  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .home-container .gallery {
+  padding: 50px;
+  max-width: 1240px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   margin-top: 43px;
   background-color: #f6f6f6;
   border-radius: 25px;
+  gap: 30px;
 }/*# sourceMappingURL=Home.css.map */
