--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -7,6 +7,18 @@ main {
 
   button {
     @include button;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 18.8px;
   }
 
 }
+
+// .rotateimg180 {
+//   -webkit-transform:rotate(180deg);
+//   -moz-transform: rotate(180deg);
+//   -ms-transform: rotate(180deg);
+//   -o-transform: rotate(180deg);
+//   transform: rotate(180deg);
+// }
