--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -9,6 +9,7 @@
 @import "../../components/Banner/Banner.scss";
 @import "../../components/Card/Card.scss";
 @import "../../components/Collapse/Collapse.scss";
+@import "../../components/Slider/Slider.scss";
 
 //pages
 @import "../../views/Home/Home.scss";
