--- a/src/assets/style/Main.css
+++ b/src/assets/style/Main.css
@@ -23,6 +23,7 @@ body {
 /*|---------------|MIXINS|---------------*/
 .ContainerFooter {
   background-color: #000000;
+  bottom: 0;
   color: #f6f6f6;
   height: 209px;
   display: flex;
@@ -31,7 +32,7 @@ body {
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 80px;
 }
 .ContainerFooter img {
   margin-top: 66px;
@@ -158,6 +159,7 @@ nav a {
   padding: 10px;
   width: 1023px;
   height: 47px;
+  font-weight: 500;
   background-color: #ff6060;
   color: #ffffff;
   border: none;
@@ -165,8 +167,8 @@ nav a {
 }
 
 .collapse button img {
-  width: 15px;
-  height: 15px;
+  width: 24px;
+  height: 13.71px;
   margin-left: 10px;
   transition: transform 0.2s ease-in-out;
 }
@@ -179,7 +181,6 @@ nav a {
   font-size: 24px;
   max-width: 1023px;
   padding: 20px;
-  margin: 10px;
   background-color: #f6f6f6;
   color: #ff6060;
   border-top: none;
@@ -219,6 +220,10 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+}
+main .containerCollapse {
+  position: relative;
 }
 main button {
   padding-left: 18.8px;
