--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -4,6 +4,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+
+  .containerCollapse {
+    position: relative;
+  }
 
   button {
     @include button;
@@ -12,13 +17,4 @@ main {
     justify-content: space-between;
     padding-right: 18.8px;
   }
-
 }
-
-// .rotateimg180 {
-//   -webkit-transform:rotate(180deg);
-//   -moz-transform: rotate(180deg);
-//   -ms-transform: rotate(180deg);
-//   -o-transform: rotate(180deg);
-//   transform: rotate(180deg);
-// }
