--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
 
 .ContainerFooter {
   background-color: $dark;
+  bottom: 0;
   color: $secondary;
   height: 209px;
   display: flex;
@@ -10,14 +11,10 @@
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
-  
-
-
-
+  margin-top: 80px;
 
   img {
-    margin-top: 66px ;
+    margin-top: 66px;
     width: 122px;
     color: $secondary;
   }
