--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -6,6 +6,7 @@
 /*|---------------|MIXINS|---------------*/
 .ContainerFooter {
   background-color: #000000;
+  bottom: 0;
   color: #f6f6f6;
   height: 209px;
   display: flex;
@@ -14,7 +15,7 @@
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 80px;
 }
 .ContainerFooter img {
   margin-top: 66px;
