--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -10,6 +10,7 @@
 @import "../../components/Card/Card.scss";
 @import "../../components/Collapse/Collapse.scss";
 @import "../../components/Slider/Slider.scss";
+@import "../../components/Tag/Tag.scss";
 
 //pages
 @import "../../views/Home/Home.scss";
