--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -1,6 +1,6 @@
 @import "../../assets/scss/config.scss";
 
-main {
+.mainAbout {
   display: flex;
   flex-direction: column;
   align-items: center;
