--- a/src/components/style/Slider.css
+++ b/src/components/style/Slider.css
@@ -11,7 +11,8 @@
 }
 
 .SliderContainer img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: relative;
   width: 100%;
   height: 415px;
@@ -33,6 +34,7 @@
   width: 100%;
   height: auto;
 }
+
 .SliderContainer button.prev {
   margin: 0;
   left: 20px;
@@ -49,4 +51,4 @@
   padding: 5px 10px;
   position: absolute;
   padding: 24px;
-}
+}/*# sourceMappingURL=Slider.css.map */
