--- a/src/views/Lodging/Lodging.scss
+++ b/src/views/Lodging/Lodging.scss
@@ -1,7 +1,65 @@
+@import "../../assets/scss/config.scss";
+
+.mainLodging {
+  display: flex;
+  flex-direction: column;
+}
+
+.lodging-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+
+  justify-content: space-between;
+  padding: 20px 100px 0px 100px;
+}
+
 .titleLodging {
-  padding-left: 1px;
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 20px;
+  font-weight: 500;
+  color: $primary;
 
   h1 {
     font-size: 36px;
   }
+  .h4 {
+    font-size: 18px;
+  }
+}
+
+.ProfilLodging {
+  display: flex;
+justify-content: flex-end;
+  align-items: center;
+
+  img {
+    width: 64px;
+    border-radius: 50%;
+    align-items: center;
+  }
+  p {
+    margin-right: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    color: $primary;
+    max-width: 30%;
+
+    @media only screen and (max-width: 768px) {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+img {
+  max-width: 100%;
+}
+.tagContainer {
+  display: flex;
+  
 }
