--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -11,6 +11,7 @@
 @import "../../components/Collapse/Collapse.scss";
 @import "../../components/Slider/Slider.scss";
 @import "../../components/Tag/Tag.scss";
+@import "../../components/Star/Star.scss";
 
 //pages
 @import "../../views/Home/Home.scss";
